# mapstruct-examples

./: .bazelignore  .gitignore  .travis.yml  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  build.gradle  license.txt  pom.xml  settings.gradle
.github/workflows/: main.yml
mapstruct-clone/: pom.xml
mapstruct-default-ignore/: pom.xml
mapstruct-field-mapping/: pom.xml
mapstruct-immutables/: pom.xml
mapstruct-iterable-to-non-iterable/: pom.xml
mapstruct-joda/: pom.xml
mapstruct-jpa-child-parent/: pom.xml
mapstruct-kotlin/: README.md  pom.xml
mapstruct-kotlin-gradle/: build.gradle.kts  settings.gradle
mapstruct-kotlin/src/main/kotlin/de/kevcodez/: Main.kt
mapstruct-lombok/: build.gradle  pom.xml  settings.gradle
mapstruct-lombok/dto/: pom.xml
mapstruct-lombok/ent/: pom.xml
mapstruct-lombok/entity/: pom.xml
mapstruct-lombok/gradle/wrapper/: gradle-wrapper.properties
mapstruct-lombok/map/: pom.xml
mapstruct-lombok/mapper/: pom.xml
mapstruct-lookup-entity-with-id/: pom.xml
mapstruct-mapper-repo/: pom.xml
mapstruct-mapper-repo/example/: pom.xml
mapstruct-mapper-repo/generator/: pom.xml
mapstruct-mapper-repo/generator/src/main/resources/: MapperRepoImpl.ftl
mapstruct-mapping-from-map/: pom.xml
mapstruct-mapping-with-cycles/: pom.xml
mapstruct-metadata-with-annotations/: pom.xml
mapstruct-nested-bean-mappings/: pom.xml
mapstruct-non-iterable-to-iterable/: pom.xml
mapstruct-non-iterable-to-iterable/src/test/java/: SourceToTargetMapperTest.java
mapstruct-on-android-with-autovalue-builders/: .gitignore  README.md  build.gradle
mapstruct-on-android-with-autovalue-builders/app/: build.gradle  proguard-rules.pro
mapstruct-on-android-with-autovalue-builders/app/src/main/: AndroidManifest.xml
mapstruct-on-android-with-autovalue-builders/app/src/main/res/layout/: activity_main.xml
mapstruct-on-ant/: README.md  build.xml
mapstruct-on-bazel/: BUILD.bazel  MODULE.bazel  README.md
mapstruct-on-bazel/src/main/java/org/mapstruct/example/: Source.java  SourceTargetMapper.java
mapstruct-on-bazel/src/test/java/org/mapstruct/example/: ConversionTest.java
mapstruct-on-gradle/: build.gradle  settings.gradle
mapstruct-on-gradle-protobuf3/: build.gradle  settings.gradle
mapstruct-on-gradle-protobuf3/gradle/wrapper/: gradle-wrapper.properties
mapstruct-on-gradle-protobuf3/spi-impl/: build.gradle
mapstruct-on-gradle-protobuf3/usage/: build.gradle
mapstruct-on-gradle-protobuf3/usage/src/main/proto/: User.proto
mapstruct-on-gradle-spi-accessor-naming/: .gitignore  build.gradle  settings.gradle
mapstruct-on-gradle-spi-accessor-naming/spi-impl/: build.gradle
mapstruct-on-gradle-spi-accessor-naming/usage/: build.gradle
mapstruct-on-gradle-testcp-with-lombok/: build.gradle  settings.gradle
mapstruct-on-gradle/gradle/wrapper/: gradle-wrapper.properties
mapstruct-protobuf3/: pom.xml
mapstruct-protobuf3/spi-impl/: pom.xml
mapstruct-protobuf3/usage/: pom.xml
mapstruct-protobuf3/usage/src/main/proto/: User.proto
mapstruct-quarkus/: README.md  pom.xml
mapstruct-quarkus/src/main/docker/: Dockerfile.jvm  Dockerfile.legacy-jar  Dockerfile.native
mapstruct-record/: pom.xml
mapstruct-rounding/: pom.xml
mapstruct-spi-accessor-naming/: pom.xml
mapstruct-spi-accessor-naming/source/: pom.xml
mapstruct-spi-accessor-naming/spi/: pom.xml
mapstruct-spi-accessor-naming/spi-impl/: pom.xml
mapstruct-spi-accessor-naming/usage/: pom.xml
mapstruct-suppress-unmapped/: pom.xml
mapstruct-updatemethods-1/: pom.xml
maptruct-iterable-to-non-iterable/: pom.xml
(+270 files in other folders)
